--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Template vite+bootstrap</title>
+    <title>Proj html vuejs</title>
   </head>
   <body>
     <div id="app"></div>
